manifests/hello-first-oauth2-proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-first-oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-first-oauth2-proxy
  template:
    metadata:
      labels:
        app: hello-first-oauth2-proxy
    spec:
      containers:
      - name: hello-kubernetes
        image: quay.io/pusher/oauth2_proxy:latest
        ports:
        - containerPort: 4180
        args:
        - --cookie-secure=false
        - --http-address=0.0.0.0:4180
        - --upstream=http://hello-first
        - --email-domain=*
        - --provider=github
---

apiVersion: v1
kind: Service
metadata:
  name: hello-first-oauth2-proxy
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 4180
  selector:
    app: hello-first-oauth2-proxy

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-first-oauth2-proxy-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: first.hello-with-auth.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-first-oauth2-proxy
          servicePort: 80
